--- a/views/404.html
+++ b/views/404.html
@@ -1,13 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Page not found!</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            background: #fafafa;
+        }
+
+        main {
+            padding: 1rem;
+        }
+
+        .main-header {
+            width: 100%;
+            height: 3.5rem;
+            background-color: #2C4B61;
+            padding: 0 1.5rem;
+        }
+
+        .main-header_nav {
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        .main-header_item-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        .main-header_item {
+            margin: 0 1rem;
+            padding: 0;
+        }
+
+        .main-header_item a {
+            text-decoration: none;
+            color: white;
+        }
+
+        .main-header_item a:visited {
+            color: white;
+        }
+
+        .main-header_item a:hover,
+        .main-header_item a:active,
+        .main-header_item a.active {
+            color: #A2C655;
+
+        }
+
+        .product-form {
+            width: 20rem;
+            max-width: 90%;
+            margin: auto;
+            padding: 10px 20px;
+            border: 1px solid #243743;
+            border-radius: 5px;
+            background: white;
+            -webkit-box-shadow: -5px 5px 5px 0px rgba(36, 55, 67, 0.1);
+            -moz-box-shadow: -5px 5px 5px 0px rgba(36, 55, 67, 0.1);
+            box-shadow: -5px 5px 5px 0px rgba(36, 55, 67, 0.1);
+        }
+
+        .form-control {
+            margin: 1rem 0;
+        }
+
+        .form-control label,
+        .form-control input {
+            display: block;
+            width: 100%;
+        }
+
+        .form-control input {
+            border: 1px solid #243743;
+            font: inherit;
+            border-radius: 2px;
+        }
+
+        button {
+            font: inherit;
+            background: #A0C755;
+            padding: 10px 5px;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+        }
+
+        button:hover,
+        button:active {
+            background: #78b64b;
+        }
+    </style>
 </head>
+
 <body>
+    <header class="main-header">
+        <nav class="main-header_nav">
+            <ul class="main-header_item-list">
+                <li class="main-header_item"><a href="/">Shop</a></li>
+                <li class="main-header_item"><a href="/admin/add-product">Add Product</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Error 404. Page not found :(</h1>
 </body>
-</html>
 
+</html>
