--- a/views/shop.html
+++ b/views/shop.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shop</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            background: #fafafa;
+        }
+
+        main {
+            padding: 1rem;
+        }
+
+        .main-header {
+            width: 100%;
+            height: 3.5rem;
+            background-color: #2C4B61;
+            padding: 0 1.5rem;
+        }
+
+        .main-header_nav {
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        .main-header_item-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        .main-header_item {
+            margin: 0 1rem;
+            padding: 0;
+        }
+
+        .main-header_item a {
+            text-decoration: none;
+            color: white;
+        }
+
+        .main-header_item a:visited {
+            color: white;
+        }
+
+        .main-header_item a:hover,
+        .main-header_item a:active,
+        .main-header_item a.active {
+            color: #A2C655;
+
+        }
+
+    </style>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
+    <header class="main-header">
+        <nav class="main-header_nav">
+            <ul class="main-header_item-list">
+                <li class="main-header_item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header_item"><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
@@ -20,6 +76,7 @@
         <h1>My products</h1>
         <p>List of all the products...</p>
     </main>
-    
+
 </body>
+
 </html>
