--- a/views/shop.html
+++ b/views/shop.html
@@ -6,60 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shop</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-            background: #fafafa;
-        }
-
-        main {
-            padding: 1rem;
-        }
-
-        .main-header {
-            width: 100%;
-            height: 3.5rem;
-            background-color: #2C4B61;
-            padding: 0 1.5rem;
-        }
-
-        .main-header_nav {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .main-header_item-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-        }
-
-        .main-header_item {
-            margin: 0 1rem;
-            padding: 0;
-        }
-
-        .main-header_item a {
-            text-decoration: none;
-            color: white;
-        }
-
-        .main-header_item a:visited {
-            color: white;
-        }
-
-        .main-header_item a:hover,
-        .main-header_item a:active,
-        .main-header_item a.active {
-            color: #A2C655;
-
-        }
-
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
