Added logic in the views to display a list & added CSS for the cards to display on the list

--- a/views/shop.pug
+++ b/views/shop.pug
@@ -4,8 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
+        title #{pageTitle}
         link(rel="stylesheet", href="/css/main.css")
+        link(rel="stylesheet", href="/css/product.css")
     body
         header.main-header
             nav.main-header_nav
@@ -15,8 +16,26 @@ html(lang="en")
                     li.main-header_item
                         a(href='/admin/add-product') Add Product
         main
-            h1 My products
-            p List of all the products...
+            if catalog.length > 0
+                h1 My products
+                .grid
+                    each product in catalog
+                        article.card.product-item
+                            header.card_header
+                                h1.product_title #{product.title}
+                            .card_image
+                                img(src="https://images-na.ssl-images-amazon.com/images/I/91MEVIjA-UL._SX569_.jpg", alt="Game")
+                            .card_content
+                                h2.product_price $39.99
+                                p.product_description Videogame made for Nintendo 3DS
+                            .card_actions
+                                button.btn Add to cart
+            else
+                h1 No products yet.
+            
+
+
+                        
 
             
     
