--- a/views/add-product.pug
+++ b/views/add-product.pug
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Add Product
-        link(rel='stylesheet', href='/css/main.css')
-        link(rel='stylesheet', href='/css/form.css')
-    body
-    header.main-header
-        nav.main-header_nav
-            ul.main-header_item-list
-                li.main-header_item
-                    a(href='/') Shop
-                li.main-header_item
-                    a.active(href='/admin/add-product') Add Product
+extends layouts/main-layout.pug
+
+block head
+    title Add Product
+    link(rel='stylesheet', href='/css/form.css')
+
+block content
     main
         form.product-form(action='/admin/add-product', method='POST')
             .form-control
                 label(for='title') Title
                 input#title(type='text', name='title')
             button(type='submit') Add product
+
