--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,8 +1,8 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/form.css">
 </head>
 
-<%- include('includes/navbar.ejs') %>
+<%- include('../includes/navbar.ejs') %>
 
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
@@ -14,5 +14,5 @@
         </form>
     </main>
 
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
 
