--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,9 +1,9 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
-<%- include('includes/navbar.ejs') %>
+<%- include('../includes/navbar.ejs') %>
 
     <main>
         <% if (catalog.length > 0) { %>
@@ -32,5 +32,5 @@
         <% } %>
     </main>
 
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
 
