--- a/public/css/form.css
+++ b/public/css/form.css
@@ -16,15 +16,22 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control textarea {
     display: block;
     width: 100%;
 }
 
-.form-control input {
+.form-control input,
+.form-control textarea {
     border: 1px solid #243743;
     font: inherit;
     border-radius: 2px;
+}
+
+.form-control input:focus,
+.form-control textarea:focus {
+    outline-color: #78b64b;
 }
 
 button {
