--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,9 @@ main {
     height: 3.5rem;
     background-color: #2C4B61;
     padding: 0 1.5rem;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(36,55,67,0.4);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(36,55,67,0.4);
+    box-shadow: 0px 2px 5px 0px rgba(36,55,67,0.4);
 }
 
 .main-header_nav {
