--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -14,14 +14,17 @@
                             <h1 class="product_title"><%= product.title %></h1>
                         </header>
                         <div class="card_image">
-                            <img src="https://images-na.ssl-images-amazon.com/images/I/91MEVIjA-UL._SX569_.jpg" alt="Game">
+                            <img src="<%= product.imageUrl %>" alt="<%= product.title %> boxart">
                         </div>
                         <div class="card_content">
-                            <h2 class="product_price">$39.99</h2>
-                            <p class="product_description">Videogame made for Nintendo 3DS</p>
+                            <h2 class="product_price">$<%= product.price %></h2>
+                            <p class="product_description"><%= product.description %></p>
                         </div>
                         <div class="card_actions">
-                            <button class="btn">Add to cart</button>
+                            <a href="/admin/edit-product" class="btn">Edit</a>
+                            <form action="/admin/delete-product">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
                         </div>
                     </article>
                 <% })%>
