--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,7 +21,9 @@
                             <p class="product_description"><%= product.description %></p>
                         </div>
                         <div class="card_actions">
-                            <button class="btn">Add to cart</button>
+                            <form action="/add-to-cart" method="POSR">
+                                <button class="btn">Add to cart</button>
+                            </form>
                         </div>
                     </article>
                 <% })%>
