--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -7,6 +11,11 @@ body {
 
 main {
     padding: 1rem;
+    margin: auto;
+}
+
+form {
+    display: inline;
 }
 
 .main-header {
@@ -14,6 +23,7 @@ main {
     height: 3.5rem;
     background-color: #2C4B61;
     padding: 0 1.5rem;
+    display: flex;
     -webkit-box-shadow: 0px 2px 5px 0px rgba(36,55,67,0.4);
     -moz-box-shadow: 0px 2px 5px 0px rgba(36,55,67,0.4);
     box-shadow: 0px 2px 5px 0px rgba(36,55,67,0.4);
@@ -21,7 +31,7 @@ main {
 
 .main-header_nav {
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
 }
 
@@ -51,6 +61,83 @@ main {
 .main-header_item a.active {
     color: #A2C655;
 
+}
+
+.mobile-nav {
+    width: 30rem;
+    height: 100vh;
+    max-width: 90%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background: white;
+    z-index: 10;
+    padding: 2rem 1rem 1rem 2rem;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
+}
+
+.mobile-nav.open {
+    transform: translateX(0);
+}
+
+.mobile-nav_item-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.mobile-nav_item {
+    margin: 1rem;
+    padding: 0;
+}
+
+.mobile-nav_item a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.5rem;
+    padding: .5rem 2rem;
+}
+
+.mobile-nav_item a:active,
+.mobile-nav_item a:hover,
+.mobile-nav_item a.active {
+    background: #00695c;
+    color: white;
+    border-radius: 3px;
+}
+
+#side-menu-toggle {
+    border: 1px solid white;
+    font: inherit;
+    padding: .5rem;
+    display: block;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+}
+
+#side-menu-toggle:focus {
+    outline: none;
+}
+
+#side-menu-toggle:active,
+#side-menu-toggle:hover {
+    color: #A2C655;
+    border-color: #A2C655;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 5;
+    display: none;
 }
 
 .grid {
@@ -95,6 +182,9 @@ main {
   }
   
   .btn {
+    display: inline-block;
+    padding: .25rem 1rem;
+    text-decoration: none;
     font: inherit;
     border: 1px solid #00695c;
     color: #00695c;
@@ -107,5 +197,15 @@ main {
   .btn:active {
     background-color: #00695c;
     color: white;
+  }
+
+  @media (min-width: 768px) {
+      .main-header_nav {
+          display: flex;
+      }
+
+      #side-menu-toggle {
+          display: none;
+      }
   }
   
