--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -21,7 +21,10 @@
                             <p class="product_description"><%= product.description %></p>
                         </div>
                         <div class="card_actions">
-                            <button class="btn">Add to cart</button>
+                            <form action="/add-to-cart">
+                                <button class="btn">Add to cart</button>
+                            </form>
+                            <a href="/products/<%= product.id %>" class="btn">Details</a>
                         </div>
                     </article>
                 <% })%>
