--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,9 +11,7 @@
         </div>
         <h2><%= product.price %></h2>
         <p><%= product.description %></p>
-        <form action="/cart" method="POST">
-            <button class="btn" type="submit">Buy</button>
-        </form>
+        <%- include('../includes/cart-button') %>
     </main>
 
 <%- include('../includes/end.ejs') %>
