--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -5,25 +5,32 @@
 <%- include('../includes/navbar.ejs') %>
 
     <main>
-        <form class="product-form" action="/admin/add-product" method="POST">
+        <form class="product-form" action="/admin/<% if (editing){%>edit-product<% } else { %>add-product<% } %>" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title">
+                <input type="text" name="title" id="title" value="<% if (editing) {%><%= product.title %><% } %>">
             </div>
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageUrl" id="imageUrl">
+                <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) {%><%= product.imageUrl %><% } %>">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" step="0.01" name="price" id="price">
+                <input type="number" step="0.01" name="price" id="price" value="<% if (editing) {%><%= product.price %><% } %>">
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" cols="30" rows="5"></textarea>
+                <textarea name="description" id="description" cols="30" rows="5"><% if (editing) {%><%= product.description %><% } %></textarea>
             </div>
             
-            <button type="submit">Add product</button>
+            <button type="submit">
+                <% if (editing) { %>
+                    Update Product 
+                    
+                <% } else { %> 
+                    Add Product 
+                <% } %>
+            </button>
         </form>
     </main>
 
