--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -31,6 +31,9 @@
                     Add Product 
                 <% } %>
             </button>
+            <% if (editing) { %>
+                <input type="hidden" name="productId" value="<%= product.id %>">
+            <% } %>
         </form>
     </main>
 
