--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -23,6 +23,7 @@
                         <div class="card_actions">
                             <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
                             <form action="/admin/delete-product">
+                                <input type="hidden" name="productId" value="<%= product.id %>">
                                 <button class="btn" type="submit">Delete</button>
                             </form>
                         </div>
