--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -22,7 +22,7 @@
                         </div>
                         <div class="card_actions">
                             <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
-                            <form action="/admin/delete-product">
+                            <form action="/admin/delete-product" method="POST">
                                 <input type="hidden" name="productId" value="<%= product.id %>">
                                 <button class="btn" type="submit">Delete</button>
                             </form>
