--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,5 +3,18 @@
 </head>
 
 <%- include('../includes/navbar.ejs') %>
+<main>
+    <% if (products.length > 0) { %>
+        <ul>
+            <% products.map(product => { %>
+                <li> <%= product.productData.title %> ( <%= product.quantity %>)  </li>
+            <% }) %>
+        </ul>
+    
+    <% } else { %>
+        <h1>You don't have any products yet :(</h1>
+    <% } %>
+
+</main>
 
 <%- include('../includes/end.ejs') %>
