--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -7,7 +7,13 @@
     <% if (products.length > 0) { %>
         <ul>
             <% products.map(product => { %>
-                <li> <%= product.productData.title %> ( <%= product.quantity %>)  </li>
+                <p>
+                    <li> <%= product.productData.title %> ( <%= product.quantity %>)  </li>
+                    <form action="/cart-delete-item" method="POST">
+                        <input type="hidden" name="productId" value="<%= product.productData.id %>">
+                        <button class="btn" type="submit">Delete</button>
+                    </form>
+                </p>
             <% }) %>
         </ul>
     
