--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,19 +1,21 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/cart.css">
 
 </head>
 
 <%- include('../includes/navbar.ejs') %>
 <main>
     <% if (products.length > 0) { %>
-        <ul>
+        <ul class="cart_item-list">
             <% products.map(product => { %>
-                <p>
-                    <li> <%= product.productData.title %> ( <%= product.quantity %>)  </li>
-                    <form action="/cart-delete-item" method="POST">
-                        <input type="hidden" name="productId" value="<%= product.productData.id %>">
+                    <li class="cart_item">
+                        <h1><%= product.title %></h1>
+                        <h2>Quantity:<%= product.cartItem.quantity %></h2>
+                        <form action="/cart-delete-item" method="POST">
+                            <input type="hidden" name="productId" value="<%= product.id %>">
                         <button class="btn" type="submit">Delete</button>
-                    </form>
-                </p>
+                        </form>
+                    </li>
             <% }) %>
         </ul>
     
