--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -3,6 +3,22 @@
 </head>
 
 <%- include('../includes/navbar.ejs') %>
-<h1>Nothing here yet.</h1>
+<% if (orders.length <= 0) { %>
+    <h1>Nothing here yet.</h1>
+<% } else { %>
+    <ul>
+        <% orders.map(order => { %>
+            <li>
+                <h1>Order #<%= order.id %> </h1>
+                <ul>
+                    <% order.products.map(product => { %>
+                        <li><%= product.title %> (<%= product.orderItem.quantity %>) </li>
+                    <% }) %>
+                </ul>
+            </li>
+        <% }) %>
+    </ul>
+
+<% } %>
 
 <%- include('../includes/end.ejs') %>
