Redefined finding specific product feature

--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -22,7 +22,7 @@
                         </div>
                         <div class="card_actions">
                             <%- include('../includes/cart-button', { product: product }) %>
-                            <a href="/products/<%= product.id %>" class="btn">Details</a>
+                            <a href="/products/<%= product._id %>" class="btn">Details</a>
                         </div>
                     </article>
                 <% })%>
