--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -32,7 +32,7 @@
                 <% } %>
             </button>
             <% if (editing) { %>
-                <input type="hidden" name="productId" value="<%= product.id %>">
+                <input type="hidden" name="productId" value="<%= product._id %>">
             <% } %>
         </form>
     </main>
